--- a/src/style.css
+++ b/src/style.css
@@ -6,102 +6,157 @@ body {
     align-content: center;
     min-width: 100vh;
     min-height: 100vh;
+
+    background-color: hsl(216, 12%, 8%);
+    color: hsl(217, 12%, 63%);
 }
 
 .content-grid-start {
     display: grid;
     margin: 30px;
     border: 3px solid black;
+    grid-template-rows: 10px 1fr 45px 84px 72px 50px;
+    grid-template-areas:
+        "."
+        "star"
+        "title"
+        "description"
+        "numberss"
+        "submit";
     width: 330px;
     height: 338px;
     margin: 0;
     padding: 20px 31px;
     border-radius: 30px;
+    background-color: hsl(213, 19%, 18%);
 }
 
 .star {
     display: flex;
     height: 44px;
     width: 44px;
-    border: 1px solid black;
+
     border-radius: 100%;
     align-items: center;
     justify-content: center;
+    grid-area: star;
+
+    background-color: hsl(213, 19%, 21%);
+
 }
 
 .title {
     font-weight: 700;
     font-size: 1.75rem;
+    grid-area: title;
+    color: hsl(0, 0%, 100%);
 }
 
-.description {}
+.description {
+    grid-area: description;
+}
 
 .numbers {
     display: grid;
     grid-template-columns: repeat(5, 1FR);
     grid-template-rows: 1fr;
     justify-items: center;
-    grid-template-areas:
-        "one two three four five";
+    grid-template-areas: "one two three four five";
+    grid-area: numberss;
 }
 
 .one {
     grid-area: one;
     height: 46px;
     width: 46px;
-    border: 0.5px solid black;
+    text-decoration: none;
     border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: hsl(213, 19%, 21%);
+    color: hsl(217, 12%, 63%)
+}
+
+.one:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 
 .two {
     grid-area: two;
     height: 46px;
     width: 46px;
-    border: 0.5px solid black;
+    text-decoration: none;
     border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: hsl(213, 19%, 21%);
+    color: hsl(217, 12%, 63%)
+}
+
+.two:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 
 .three {
     grid-area: three;
     height: 46px;
     width: 46px;
-    border: 0.5px solid black;
+    text-decoration: none;
     border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: hsl(213, 19%, 21%);
+    color: hsl(217, 12%, 63%)
+}
+
+.three:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 
 .four {
     grid-area: four;
     height: 46px;
     width: 46px;
-    border: 0.5px solid black;
+    text-decoration: none;
     border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: hsl(213, 19%, 21%);
+    color: hsl(217, 12%, 63%)
+}
+
+.four:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 
 .five {
     grid-area: five;
     height: 46px;
     width: 46px;
-    border: 0.5px solid black;
+    text-decoration: none;
     border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: hsl(213, 19%, 21%);
+    color: hsl(217, 12%, 63%);
+}
+
+.five:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 
 .submit {
-    border: 0.5px solid black;
+    text-decoration: none;
     margin-bottom: -15px;
     width: 100%;
     height: 43px;
@@ -109,6 +164,14 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 43px;
+    grid-area: submit;
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
+}
+
+.submit:active {
+    color: hsl(25, 97%, 53%);
+    background-color: hsl(0, 0%, 100%);
 }
 
 .content-grid-end {
